0.8.2 - 

  * added support for decoding _all_ datatypes of the RBR protocol
  * fixed handling a "used columns" in the RBR protocol

0.8.1 - 

  * remove unix-socket on shutdown
  * fixed handling of LOAD DATA LOCAL INFILE (#51864)
  * fixed mem-leak on connect for pre-4.1 clients
  * fixed initial error-packet sent to client if all backends are down (#45417)
  * don't try to set a fd-limit if the user didn't explicitly tried to raise it
  * fixed hard-limit in case the fdlimit is set (#48120)
  * fixed traversing a resultset in Lua if it contained NULL fields
  * strip the top_srcdir from the leading source filenames in log-messages

  SQL Tokenizer
  * fixed parsing of literals that start with a digit (#49716)
  * added parsing of floats in scientific notation

  Proxy Plugin
  * fixed query forwarding of time goes backwards (#50806)
  * allow to intercept LOAD DATA and SHOW ERROR commands

  Admin Plugin
  * removed the default values for --admin-username and --admin-password
  * enforce --admin-username, --admin-password and --admin-lua-script to be set
    if the admin plugin is loaded (#53429)
  
  API
  * deprecated a unused network_mysqld_com_query_result_track_state()
  * deprecated chassis_set_fdlimit() in favour of chassis_fdlimit_set()
  * fixed thread-safety for network_address_set_address() (#49099)
  * split the chassis.c into chassis_frontend_*.c to allow custom frontends
  * added shutdown hooks to free the global memory of 3rd party libs like openssl
  * removed con->in_load_data_local

0.8.0 - 2010-01-21

  * added a threaded event handling layer
  * added support to change the auth-response on the way to the backend
  * added timing infrastruture
  * added out-of-tree plugins builds and pkg-config support
  * fixed handling of broken length encoded data in resultsets
  * fixed version encoding in win32 (#45996)
  * fixed too small listen backlog() (#43278)
  * fixed configure check if flex is really installed (#45766)